adicionando foto e titulo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título da página</title>
+    <title>Fanpage de Gatinhos</title>
 </head>
 <body>
-    <h1>Aqui vai um título</h1>
+    <h1>Perfil #catsoninstagram</h1>
+    <img src="/imagem/4782768_1cdc28f74bff261.jpg" />
 </body>
 </html>
